Step4 - 사다리(리팩터링) 및 3단계 피드백 수정 (#2260)
* refactor: 피드백 내용 수정

- List.of 사용
- Stream 개행 수정
- Ui 값 도메인 반환
- final 추가

* feat : 4단계 구현

- Boolean -> Line으로 대체
- ResultView ui에 활용되는 참가 인원과 결과의 최대길이 구하는 코드 수정

* docs : README.md Line 관련 도메인 내용 추가