@@ -3,9 +3,9 @@ package nextstep.ladder.domain;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
+import static nextstep.ladder.LadderMethod.toLines;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
@@ -14,12 +14,12 @@ public class LadderTest {
     @DisplayName("2명이면 선은 1개, 선은 그리는 것으로 하기")
     @Test
     void 전략패턴_검증() {
-        List<Boolean> lines = Arrays.asList(true);
-        Ladder ladder = new Ladder(lines);
+        List<Boolean> lines = List.of(true);
+        Ladder ladder = new Ladder(toLines(lines));
 
         assertAll(
                 () -> assertThat(ladder.getLines()).hasSize(1),
-                () -> assertThat(ladder.getLines().get(0)).isTrue()
+                () -> assertThat(ladder.getLines().get(0).isLine()).isTrue()
         );
     }
 
@@ -28,8 +28,8 @@ public class LadderTest {
     void search_position() {
         // 0      1      2     3     4      5      6
         //   true, false, false, true, false, false
-        List<Boolean> lines = Arrays.asList(true, false, false, true, false, false);
-        Ladder ladder = new Ladder(lines);
+        List<Boolean> lines = List.of(true, false, false, true, false, false);
+        Ladder ladder = new Ladder(toLines(lines));
         assertAll(
                 () -> assertThat(ladder.search(0)).isEqualTo(1)
                 , () -> assertThat(ladder.search(1)).isEqualTo(0)
